--- a/podgotovka_k_ekzamenu-new.html
+++ b/podgotovka_k_ekzamenu-new.html
@@ -2,12 +2,12 @@
 <html lang="ru">
 	<head>
 		<title>
-			Репетитор по математике Минск. ИЗМЕНИТЬ
+			Репетитор по высшей математике Минск. От алгебры до теории вероятностей
 		</title>
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="ИЗМЕНИТЬ Репетитор по математике в Минске для школьников проводит подготовку к ЦТ и дополнительные  занятия по алгебре и геометрии: 5,6,7,8,9,10,11 класс. Репетитор по высшей математике для студентов Минск – преподаватель со стажем более 20 лет, кандидат физико-математических наук.">
-		<meta name="keywords" content="ИЗМЕНИТЬ репетитор, репетитор по математике, репетитор математика, репетитор математики, подготовка по математике, ЦТ подготовка, ЦТ математика, подготовка по математике к ЦТ, репетитор класс, репетитор по высшей математике, репетитор Минск, репетитор по математике в Минске, репетитор по алгебре, репетитор по геометрии">
+		<meta name="description" content="Занятия с репетитором по высшей математике в Минске для студентов вузов. Срочную подготовку к экзамену проводит кандидат физико-математических наук. РБ">
+		<meta name="keywords" content="экзамен, подготовка, занятия, преподаватель">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
@@ -30,10 +30,9 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Репетитор по математике в Минске ИЗМЕНИТЬ</h1>
+			<h1>Подготовка к экзамену</h1>
 			<span class="zs">  
-				Математика: подготовка к ЦТ по математике, репетитор математики для школьников, <br>
-				репетитор по высшей математике для студентов, Минск. ИЗМЕНИТЬ
+				индивидуальные занятия, занятия в паре и минигруппах
 			</span>
 			</div>
 			<div class="g3">
@@ -300,41 +299,51 @@
 		</div>
 		
 		<div class="main">
-			<h2 class="main">
-				<span class="h11">
-					Репетитор по математике и высшей математике в Минске Игнатьев Игорь Викторович<br>
-					Проспект Дзержинского, дом 131, станция метро «Малиновка», Брилевичи ИЗМЕНИТЬ
-				</span>
-			</h2>
-
-			<div class="right1">
-				<span class="skr">
-					<a href="otzivi.html">Отзывы о репетиторе с комментариями</a>
-				</span>
-			</div>
-
 			<h2 class="main"> 
-				<span class="h21">Основные направления деятельности:</span>
+				<span class="h21">Подготовка к экзамену</span>
 			</h2>
 
-			<div id="realmain" class="zgt">
-				<p class="zgt">
-					ИЗМЕНИТЬ ОСНОВНОЕ СОДЕРЖАНИЕ
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pulvinar euismod lorem vel ornare. Nulla accumsan suscipit mollis. Nunc maximus mauris sit amet nisi aliquam, sit amet rutrum libero laoreet. Phasellus non velit ac nisl malesuada finibus. Quisque quis nunc id tellus interdum maximus. Mauris sit amet gravida orci, ut iaculis nibh. Suspendisse volutpat feugiat orci quis faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque id sagittis metus, nec sagittis ligula. Aliquam viverra quam non risus luctus, ut rutrum nisl mattis. Quisque nec libero euismod sem tincidunt ornare cursus at metus. Nunc suscipit fermentum egestas. Nullam id enim eu enim facilisis commodo.
-					Suspendisse vulputate leo eu commodo maximus. Sed nisi urna, varius sed efficitur eget, venenatis id ipsum. Nullam pretium mi non arcu rutrum, a faucibus nunc pretium. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque congue lectus sit amet turpis ultrices aliquam. Nunc euismod erat magna, quis egestas sem gravida eu. Nunc pellentesque facilisis mauris, non facilisis purus ultrices egestas. Phasellus ultricies euismod erat, sit amet porta tellus semper ut. Aenean non turpis viverra, aliquet sapien eget, egestas diam. Nullam sed neque ac ex egestas commodo non quis dolor. Donec elit diam, porttitor sed enim non, auctor ornare ante. Aenean laoreet efficitur quam, sit amet tempor dui ultricies placerat. Cras placerat eu nulla sit amet placerat. Ut a ultrices nisi.
-				</p>
-				<ul>
-					<li>Пункт важный </li>
-					<li>Пункт менее важный</li>
-				</ul>
-				<ol>
-					<li>Пункт первый </li>
-					<li>Пункт второй</li>
-				</ol>
-				<p class="zgt">
-					<img src="images/advantages/a2_multifunctionality.png" alt="Выбрать нужный рисунок">
-				</p>
-			</div>
+			<p class="zgt">
+				1. Зачастую, многие студенты полагают, что, поступив в ВУЗ, они обязательно через 5 лет получат диплом. Это не совсем так. Высшее образование не является обязательным и не предполагает «разжевывания» материала, многое дается на самостоятельную проработку. Далеко не все оказываются готовы к такому подходу. В результате - пересдача (в лучшем случае). Не является секретом, что большинство студентов отчисляют на 1-м и 2-м курсах, что вполне разумно. Зачем держать неуспевающих студентов? Наиболее «отсевным» предметом является высшая математика (ТВ и МС, математическое программирование), благодаря которой обычно отчисляется больше студентов, чем по всем остальным предметам вместе взятым. Это вполне логично, т.к. выучить математику невозможно, требуется понимание данного материала и умение применять его на практике. Далеко не каждому под силу разобраться самостоятельно, но, как говорится, пока гром не грянет, мужик не перекрестится.
+			</p>
+			<p class="zgt">
+				Совет: не стоит доводить дело до пересдачи, решайте проблемы по мере их появления.
+			</p>
+			<p class="zgt">
+				Если же ситуация на грани отчисления - отчаиваться не стоит, проблему можно решить, но будьте готовы, что придется приложить максимум усилий.
+			</p>
+			<p class="zgt">
+				2. Предложение:
+			</p>
+			<p class="zgt">
+				- индивидуальные занятия, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость от 10 до 12,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+			</p>
+			<p class="zgt">
+				- занятия в паре, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 10 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+			</p>
+			<p class="zgt">
+				- занятия в мини группах, продолжительность от 2-х (90 минут) до 3 (135 минут) академических часа, стоимость от 7,5 до 10 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час. В группе 3-5 человек.
+			</p>
+			<p class="zgt">
+				- количество занятий: 1-2 раза в неделю (90-135-180 минут). При ограничении во времени частоту занятий желательно  увеличить.
+			</p>
+			<p class="zgt">
+				- для студентов математичкских факультетов и специальностей (включая прикладные) цену следует уточнить.
+			</p>
+			<p class="zgt">
+				- для тех, кому требуется экстренная помощь (несколько занятий), нужно смотреть раздел «Консультации».
+			</p>
+			<p class="zgt">
+				3. Записаться на занятия можно по телефонам: <br><br>
+				<b>
+					8-017-37-222-73 (городской)<br>
+					8-029-657-59-71 (Velcom)<br>
+					8-029-851-52-51 (MTS)
+				</b>
+			</p>
+			<p class="zgt">
+				P.S.: Занятия проходят на территории преподавателя.
+			</p>
 
 			<div class="right1">
 				<p>
