M-32. Copied content from old page.

--- a/metodika_prepodavania-new.html
+++ b/metodika_prepodavania-new.html
@@ -2,12 +2,12 @@
 <html lang="ru">
 	<head>
 		<title>
-			Репетитор по математике Минск. ИЗМЕНИТЬ
+			Подготовка к ЦТ по математике в Минске. ЦТ на 100 баллов
 		</title>
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="ИЗМЕНИТЬ Репетитор по математике в Минске для школьников проводит подготовку к ЦТ и дополнительные  занятия по алгебре и геометрии: 5,6,7,8,9,10,11 класс. Репетитор по высшей математике для студентов Минск – преподаватель со стажем более 20 лет, кандидат физико-математических наук.">
-		<meta name="keywords" content="ИЗМЕНИТЬ репетитор, репетитор по математике, репетитор математика, репетитор математики, подготовка по математике, ЦТ подготовка, ЦТ математика, подготовка по математике к ЦТ, репетитор класс, репетитор по высшей математике, репетитор Минск, репетитор по математике в Минске, репетитор по алгебре, репетитор по геометрии">
+		<meta name="description" content="Подготовка к ЦТ Минск, Беларусь. Централизованное тестирование по математике, цена высоких результатов - опыт преподавателя. Репетитор ЦТ 2018, 2019, 2020">
+		<meta name="keywords" content="методика, ЦТ, занятия, цены, подготовка">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
@@ -30,10 +30,9 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Репетитор по математике в Минске ИЗМЕНИТЬ</h1>
+			<h1>Методика преподавания</h1>
 			<span class="zs">  
-				Математика: подготовка к ЦТ по математике, репетитор математики для школьников, <br>
-				репетитор по высшей математике для студентов, Минск. ИЗМЕНИТЬ
+				подготовка к ЦТ, подготовка в колледж
 			</span>
 			</div>
 			<div class="g3">
@@ -300,13 +299,6 @@
 		</div>
 		
 		<div class="main">
-			<h2 class="main">
-				<span class="h11">
-					Репетитор по математике и высшей математике в Минске Игнатьев Игорь Викторович<br>
-					Проспект Дзержинского, дом 131, станция метро «Малиновка», Брилевичи ИЗМЕНИТЬ
-				</span>
-			</h2>
-
 			<div class="right1">
 				<span class="skr">
 					<a href="otzivi.html">Отзывы о репетиторе с комментариями</a>
@@ -314,25 +306,78 @@
 			</div>
 
 			<h2 class="main"> 
-				<span class="h21">Основные направления деятельности:</span>
+				<span class="h21">Методика преподавания</span>
 			</h2>
 
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-					ИЗМЕНИТЬ ОСНОВНОЕ СОДЕРЖАНИЕ
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pulvinar euismod lorem vel ornare. Nulla accumsan suscipit mollis. Nunc maximus mauris sit amet nisi aliquam, sit amet rutrum libero laoreet. Phasellus non velit ac nisl malesuada finibus. Quisque quis nunc id tellus interdum maximus. Mauris sit amet gravida orci, ut iaculis nibh. Suspendisse volutpat feugiat orci quis faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque id sagittis metus, nec sagittis ligula. Aliquam viverra quam non risus luctus, ut rutrum nisl mattis. Quisque nec libero euismod sem tincidunt ornare cursus at metus. Nunc suscipit fermentum egestas. Nullam id enim eu enim facilisis commodo.
-					Suspendisse vulputate leo eu commodo maximus. Sed nisi urna, varius sed efficitur eget, venenatis id ipsum. Nullam pretium mi non arcu rutrum, a faucibus nunc pretium. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque congue lectus sit amet turpis ultrices aliquam. Nunc euismod erat magna, quis egestas sem gravida eu. Nunc pellentesque facilisis mauris, non facilisis purus ultrices egestas. Phasellus ultricies euismod erat, sit amet porta tellus semper ut. Aenean non turpis viverra, aliquet sapien eget, egestas diam. Nullam sed neque ac ex egestas commodo non quis dolor. Donec elit diam, porttitor sed enim non, auctor ornare ante. Aenean laoreet efficitur quam, sit amet tempor dui ultricies placerat. Cras placerat eu nulla sit amet placerat. Ut a ultrices nisi.
+					За многолетний опыт работы собрано огромное количество необходимых материалов (все варианты ЦТ с момента основания, включая пробные, варианты экзаменов в различные колледжи и лицеи Беларуси).
 				</p>
-				<ul>
-					<li>Пункт важный </li>
-					<li>Пункт менее важный</li>
-				</ul>
-				<ol>
-					<li>Пункт первый </li>
-					<li>Пункт второй</li>
-				</ol>
 				<p class="zgt">
-					<img src="images/advantages/a2_multifunctionality.png" alt="Выбрать нужный рисунок">
+					1. Подготовка к ЦТ:
+				</p>
+				<p class="zgt">
+					1 этап
+				</p>
+				<p class="zgt">
+					- решение тестовых задач по разделам за курс базовой школы (5-9 классы);
+				</p>
+				<p class="zgt">
+					- овладение полной теоретической базой 9 классов;
+				</p>
+				<p class="zgt">
+					- решение неполных  вариантов ЦТ (исключая материал 10-11 классов) прошлых лет.
+				</p>
+				<p class="zgt">
+					2 этап
+				</p>
+				<p class="zgt">
+					- решение тестовых задач по разделам за курс старшей школы (10-11 классы); 
+				</p>
+				<p class="zgt">
+					- овладение полной теоретической базой 10,11 классов;
+				</p>
+				<p class="zgt">
+					- решение неполных  вариантов ЦТ (материал 10-11 классов) прошлых лет.
+				</p>
+				<p class="zgt">
+					3 этап
+				</p>
+				<p class="zgt">
+					- решение полных вариантов ЦТ прошлых лет;
+				</p>
+				<p class="zgt">
+					- итоговое закрепление пройденного материала.
+				</p>
+				<p class="zgt">
+					2. Подготовка в колледж:
+				</p>
+				<p class="zgt">
+					1 этап
+				</p>
+				<p class="zgt">
+					- решение экзаменационных задач по разделам; 
+				</p>
+				<p class="zgt">
+					- овладение полной теоретической базой (при устном экзамене – с доказательствами).
+				</p>
+				<p class="zgt">
+					2 этап
+				</p>
+				<p class="zgt">
+					- решение полных экзаменационных вариантов прошлых лет;
+				</p>
+				<p class="zgt">
+					- итоговое закрепление пройденного материала.
+				</p>
+				<p class="zgt">
+					3. Процесс обучения предусматривает объемное домашнее задание, овладение методами и приемами, не встречавшимися ранее, разбор задач-ловушек, применение нестандартных ходов, аналитический подход. Используются варианты РИКЗ (для колледжей – варианты вступительных экзаменов в колледж) и авторские наработки.
+				</p>
+				<p class="zgt">
+					4. Предварительные результаты ЦТ 2014 таковы. На 100 баллов испытание по математике написали 16 абитуриентов. Из прошедших ЦТ по этому предмету 62 277 абитуриентов меньше чем 15 баллов набрали около 25 тыс. юношей и девушек, а 132 абитуриента написали тест на 0 баллов. На практике это означает, что 40% поступающих не набрали проходной балл (если перейти к 10-ти балльной системе, то не набрали и 2-х баллов). Разумеется, результаты моих учеников значительно выше. Но общий уровень знаний абитуриентов представить не сложно. Отмечу, что большинство из них занимались с репетиторами, не редко по принципу: Самый лучший репетитор - это самый дешевый репетитор, живущий рядом, а еще лучше, приезжающий на дом. Не стоит думать, что требования ЦТ завышены, они как раз достаточно объективны, а вот уровень знаний учеников, мягко сказать оставляет желать лучшего. Помните, главное, не  поступить, а  куда поступить. Важно получить не просто "корочку", а знания, которые принесут в дальнейшем достойный доход и положение.
+				</p>
+				<p class="zgt">
+					И еще, «проскочив» с минимальными баллами по математике на не весьма популярную специальность не самого престижного вуза, элементарно можно «выскочить» в самую первую сессию, так как даже для минимального восприятия высшей математике необходим достаточный уровень знаний.  Но принимать решение только Вам. Удачи на ЦТ 2015, хотя одной удачи будет мало.
 				</p>
 			</div>
 
