--- a/mestopolozhenie.html
+++ b/mestopolozhenie.html
@@ -342,7 +342,7 @@
 	<div class="telefon2">
 		<img src="./images/photo/vi.png"><a href="viber://add?number=375296575971">+375 (29) 657-59-71</a><br>
 		
-			<img src="/te.png"
+			<img src="./images/advantages/telegram.png"
 					alt="tech">
 					<a style="text-decoration: none;" 
 						 href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
