M-114. Добавлен пропущенный div.

--- a/podgotovka_k_ekzamenu.html
+++ b/podgotovka_k_ekzamenu.html
@@ -299,6 +299,13 @@
 		</div>
 		
 		<div class="main">
+
+			<div class="right1">
+				<span class="skr">
+					<a href="otzivi.html">Отзывы о репетиторе с комментариями</a>
+				</span>
+			</div>
+
 			<h2 class="main"> 
 				<span class="h21">Подготовка к экзамену</span>
 			</h2>
