--- a/site_map.html
+++ b/site_map.html
@@ -303,6 +303,12 @@
 		</div>
 		
 		<div class="main">
+
+			<div class="right1">
+				<span class="skr">
+					<a href="otzivi.html">Отзывы о репетиторе с комментариями</a>
+				</span>
+			</div>
 			<div id="realmain" class="zgt">
 				<h1>Карта сайта</h1>
 					<h2 class="mainleft">Общая информация</h2>
