--- a/index.html
+++ b/index.html
@@ -340,14 +340,18 @@
 			</div>
 			<p></p> 
 			<div class="ck"> 
-				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank"><img alt="Репетитор по математике в Минске"
-					class="image1"  
-					src="images/photo/mathematics_tutor.jpg" 
-					title="Репетитор по математике в Минске"></a>
-				<img alt="Занятия по математике в группах"
-					class="image" 
-					src="images/photo/tutor.jpg" 
-					title="Занятия по математике в группах">
+				<a href="https://youtu.be/EYH5g5kS_xg" target="_blank">
+					<img alt="Репетитор по математике в Минске"
+						class="image1"  
+						src="images/photo/mathematics_tutor.jpg" 
+						title="Репетитор по математике в Минске">
+				</a>
+				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank">
+					<img alt="Занятия по математике в группах"
+						class="image" 
+						src="images/photo/tutor.jpg" 
+						title="Занятия по математике в группах">
+				</a>
 			</div>
 			<h2 class="main"> 
 				<span class="h21">Основные направления деятельности:</span>
