--- a/index.html
+++ b/index.html
@@ -340,14 +340,18 @@
 			</div>
 			<p></p> 
 			<div class="ck"> 
-				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank"><img alt="Репетитор по математике в Минске"
-					class="image1"  
-					src="images/photo/mathematics_tutor.jpg" 
-					title="Репетитор по математике в Минске"></a>
-				<img alt="Занятия по математике в группах"
-					class="image" 
-					src="images/photo/tutor.jpg" 
-					title="Занятия по математике в группах">
+				<a href="https://youtu.be/EYH5g5kS_xg" target="_blank">
+					<img alt="Репетитор по математике в Минске"
+						class="image1"  
+						src="images/photo/mathematics_tutor.jpg" 
+						title="Репетитор по математике в Минске">
+				</a>
+				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank">
+					<img alt="Занятия по математике в группах"
+						class="image" 
+						src="images/photo/tutor.jpg" 
+						title="Занятия по математике в группах">
+				</a>
 			</div>
 			<h2 class="main"> 
 				<span class="h21">Основные направления деятельности:</span>
@@ -868,7 +872,8 @@
 				<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375296575971">+375(29)657-59-71</a><br>
 				<img src="./images/advantages/skype.png"> <a href="skype:xoziain_777?chat”">(по запросу)</a> 
 			</div>
-			<div class="glf3">
+			<div class="glf3" style="margin-top:0%;">
+				<img src="./images/advantages/world-map.png"> <a href="site_map.html">Карта сайта</a><br>
 				<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
 				<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
 			</div>
@@ -893,7 +898,8 @@
 				<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375296575971">+375(29)657-59-71</a><br>
 				<img src="./images/advantages/skype.png"> <a href="skype:xoziain_777?chat”">(по запросу)</a> 
 			</div>
-			<div class="glf3">
+			<div class="glf3" style="margin-top:0%;">
+				<img src="./images/advantages/world-map.png"> <a href="site_map.html">Карта сайта</a><br>
 				<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
 				<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
 			</div>
@@ -918,7 +924,8 @@
 				<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375296575971">+375(29)657-59-71</a><br>
 				<img src="./images/advantages/skype.png"> <a href="skype:xoziain_777?chat”">(по запросу)</a> 
 			</div>
-			<div class="glf3">
+			<div class="glf3" style="margin-top:0%;">
+				<img src="./images/advantages/world-map.png"> <a href="site_map.html">Карта сайта</a><br>
 				<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
 				<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
 			</div>
