--- a/mestopolozhenie.html
+++ b/mestopolozhenie.html
@@ -341,13 +341,7 @@
 	</div>
 	<div class="telefon2">
 		<img src="./images/photo/vi.png"><a href="viber://add?number=375296575971">+375 (29) 657-59-71</a><br>
-		
-			<img src="/te.png"
-					alt="tech">
-					<a style="text-decoration: none;" 
-						 href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
-		
-		
+		<img src="./images/photo/telegram.png" alt="telegram"> <a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
 		<img src="./images/photo/wa.png"><a href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375 (29) 657-59-71</a><br>
 		<img src="./images/photo/sk.png"><a href="skype:xoziain_777?chat%E2%80%9D">(по запросу)</a>
 	</div>
