--- a/site_map.html
+++ b/site_map.html
@@ -2,16 +2,20 @@
 <html lang="ru">
 	<head>
 		<title>
-			Репетитор по математике цена Минск. Цена часа академического (45 минут) от 7,5 у.е.
+			Репетитор по математике Минск. Карта сайта.
 		</title>
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Репетиторы цена. Все расценки на занятия по математике в Минске. Подготовка к ЦТ цены. Стоимость занятий с репетитором для  подготовки к централизованному тестированию в РБ">
-		<meta name="keywords" content="ЦТ, занятия, цены, подготовка">
+		<meta name="description" content="ИЗМЕНИТЬ Репетитор по математике в Минске для школьников проводит подготовку к ЦТ и дополнительные  занятия по алгебре и геометрии: 5,6,7,8,9,10,11 класс. Репетитор по высшей математике для студентов Минск – преподаватель со стажем более 20 лет, кандидат физико-математических наук.">
+		<meta name="keywords" content="ИЗМЕНИТЬ репетитор, репетитор по математике, репетитор математика, репетитор математики, подготовка по математике, ЦТ подготовка, ЦТ математика, подготовка по математике к ЦТ, репетитор класс, репетитор по высшей математике, репетитор Минск, репетитор по математике в Минске, репетитор по алгебре, репетитор по геометрии">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
 		<style>
+			.mainleft {
+				text-align: left;
+				color: dimgray;
+			}
 		</style>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114776658-1">
@@ -30,9 +34,9 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Условия и цены</h1>
+			<h1>Репетитор по математике в Минске.</h1>
 			<span class="zs">  
-				подготовка к ЦТ, подготовка в колледж
+				Карта сайта.
 			</span>
 			</div>
 			<div class="g3">
@@ -305,45 +309,48 @@
 					<a href="otzivi.html">Отзывы о репетиторе с комментариями</a>
 				</span>
 			</div>
-
-			<h2 class="main"> 
-				<span class="h21">Условия и цены</span>
-			</h2>
-
 			<div id="realmain" class="zgt">
-				<p class="zgt">
-					1. Подготовка к ЦТ (для 11 класса, выпускников колледжей и уже получивших среднее образование, продолжительность занятия – 3 академических часа, для остальных-2):
-				</p>
-				<p class="zgt">
-					- индивидуальные занятия, продолжительность 3 (135 минут) академических часа, стоимость от 10 до 11,5 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час.
-				</p>
-				<p class="zgt">
-					- занятия в паре, продолжительность 3 (135 минут) академических часа, стоимость 10 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час.
-				</p>
-				<p class="zgt">
-					- занятия в мини-группах, продолжительность 3 (135 минут) академических часа, стоимость 8 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час. В группе 3-4 человека (не более 5).
-				</p>
-				<p class="zgt">
-					Стабильно хорошие результаты достигаются при любом виде занятий, зачастую лучшие – в парах или мини-группах. Вы экономите свои деньги и мое время. Главное – желание заниматься, быть готовым к преодолению трудностей, то есть целеустремленность и трудолюбие. Не стоит думать, что продолжительность занятия (3 академических часа) велика для вашего ребенка. Помните, что централизованное тестирование по математике продолжается   4 академических часа, 3 из которых абитуриент должен работать с полной нагрузкой, а один час оставить на проверку и решение ранее нерешенных заданий.
-				</p>
-				<p class="zgt">
-					2. Подготовка в колледж и к ЦТ (ученики 10-х классов и младше):
-				</p>
-				<p class="zgt">
-					- индивидуальные занятия, продолжительность 2 (90 минут) академических часа, стоимость от 10 до 12,5  долларов США по курсу продажи в коммерческих банках Беларуси за один академический час.
-				</p>
-				<p class="zgt">
-					- занятия в паре, продолжительность 2 (90 минут) академических часа, стоимость 10 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час.
-				</p>
-				<p class="zgt">
-					- занятия в мини-группах, продолжительность 2 (90 минут) академических часа, стоимость 7,5 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час. В группе 3-4 человека.
-				</p>
-				<p class="zgt">
-					3. Подготовка к ЦТ и в колледж по русскому, белорусскому языкам:
-				</p>
-				<p class="zgt">
-					- индивидуальные занятия и занятия в паре, продолжительность 2 (90 минут) академических часа, стоимость от 7,5 (в паре) до 10 (индивидуально) долларов США по курсу продажи в коммерческих банках Беларуси за один академический час.
-				</p>
+				<h1>Карта сайта</h1>
+					<h2 class="mainleft">Общая информация</h2>
+					<p class="zgt">
+						<a class="blink" href="index.html">Главная</a><br>
+						<a class="blink" href="mestopolozhenie.html">Контактная информация и местоположение</a><br>
+						<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
+						<a class="blink" href="about.html">Обо мне</a><br>
+						<a class="blink" href="cabinet.html">Рабочий кабинет</a><br>
+					</p>
+
+					<h2 class="mainleft">Школьникам</h2>
+					<p class="zgt">
+						<a class="blink" href="shkolnikam.html">Школьникам</a>
+					</p>
+
+					<h2 class="mainleft">Абитуриентам</h2>
+						<p class="zgt">
+							<a class="blink" href="uslovia_i_ceny2.html">Условия и цены</a><br>
+							<a class="blink" href="metodika_prepodavania.html">Методика преподавания и результаты ЦТ</a>
+						</p>
+						<h3>примеры ЦТ (Проверь себя)</h3>
+							<p class="zgt">
+								<a class="blink" href="pdf/3.pdf">Тест 1 (Легкий)</a><br>
+								<a class="blink" href="pdf/4.pdf">Тест 2 (Средний)</a><br>
+								<a class="blink" href="pdf/5.pdf">Тест 3 (Продвинутый)</a><br>
+								<a class="blink" href="pdf/6.pdf">Ответы к тестам</a><br>
+							</p>
+
+					<h2 class="mainleft">Студентам</h2>
+						<p class="zgt">
+							<a class="blink" href="podgotovka_k_ekzamenu.html">Подготовка к экзамену</a><br>
+							<a class="blink" href="pomosch_reshenii_zadach.html">Консультации и дистанционная помощь в решении задач</a>
+						</p>
+						<h3 class="mainleft">Примеры решения задач</h3>
+							<p class="zgt">
+								<a class="blink" href="pdf/8a.pdf">Линейная алгебра, аналитическая геометрия, пределы, производная</a><br>
+								<a class="blink" href="pdf/8b.pdf">ФНП, интегралы, дифференциальные уравнения</a><br>
+								<a class="blink" href="pdf/8c.pdf">Двойные, тройные, криволинейные интегралы, элеметы теории поля, ряды</a><br>
+								<a class="blink" href="pdf/8d.pdf">ТВиМС, математическое программирование</a><br>
+								<a class="blink" href="pdf/8e.pdf">ЭММ</a>
+							</p>
 			</div>
 
 			<div class="right1">
