--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
 					<img alt="Репетитор по математике в Минске"
 						class="image1"  
 						src="images/photo/mathematics_tutor.jpg" 
-						title="Репетитор по математике в Минске">
-				</a>
+						title="Репетитор по математике в Минске"></a>
+				<!-- </a> При наличии tab-ов или даже переноса строки - добавляет между фото фиолетовую ссылку длиной в пробел -->
 				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank">
 					<img alt="Занятия по математике в группах"
 						class="image" 
