--- a/mathematics-for-professionals.html
+++ b/mathematics-for-professionals.html
@@ -2,16 +2,20 @@
 <html lang="ru">
 	<head>
 		<title>
-			Репетитор по математике Минск. ИЗМЕНИТЬ
+			Репетитор по математике для взрослых в Минске. Репетитор по математике для IT-специалистов Минск. Репетитор по высшей математике Малиновка. Репетитор по теории вероятностей и математической статистике Беларусь.
 		</title>
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="ИЗМЕНИТЬ Репетитор по математике в Минске для школьников проводит подготовку к ЦТ и дополнительные  занятия по алгебре и геометрии: 5,6,7,8,9,10,11 класс. Репетитор по высшей математике для студентов Минск – преподаватель со стажем более 20 лет, кандидат физико-математических наук.">
-		<meta name="keywords" content="ИЗМЕНИТЬ репетитор, репетитор по математике, репетитор математика, репетитор математики, подготовка по математике, ЦТ подготовка, ЦТ математика, подготовка по математике к ЦТ, репетитор класс, репетитор по высшей математике, репетитор Минск, репетитор по математике в Минске, репетитор по алгебре, репетитор по геометрии">
+		<meta name="description" content="Репетитор по математике для взрослых в Минске. Репетитор по математике для IT-специалистов Минск. Репетитор по высшей математике Малиновка. Репетитор по теории вероятностей и математической статистике Беларусь.">
+		<meta name="keywords" content="репетитор по математике для it, математика для it, математика для взрослых, репетитор по высшей математике, математика для программистов, репетитор по математике для взрослых">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
 		<style>
+			.mainleft {
+				text-align: left;
+				color: dimgray;
+			}
 		</style>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114776658-1">
@@ -30,10 +34,11 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Репетитор по математике в Минске ИЗМЕНИТЬ</h1>
+			<h1>Репетитор по математике для взрослых в Минске.</h1>
 			<span class="zs">  
-				Математика: подготовка к ЦТ по математике, репетитор математики для школьников, <br>
-				репетитор по высшей математике для студентов, Минск. ИЗМЕНИТЬ
+				Репетитор по математике для IT-специалистов Минск.<br>
+				Репетитор по высшей математике Малиновка.<br>
+				Репетитор по теории вероятностей и математической статистике Беларусь.
 			</span>
 			</div>
 			<div class="g3">
@@ -300,13 +305,6 @@
 		</div>
 		
 		<div class="main">
-			<h2 class="main">
-				<span class="h11">
-					Репетитор по математике и высшей математике в Минске Игнатьев Игорь Викторович<br>
-					Проспект Дзержинского, дом 131, станция метро «Малиновка», Брилевичи ИЗМЕНИТЬ
-				</span>
-			</h2>
-
 			<div class="right1">
 				<span class="skr">
 					<a href="otzivi.html">Отзывы о репетиторе с комментариями</a>
@@ -314,25 +312,106 @@
 			</div>
 
 			<h2 class="main"> 
-				<span class="h21">Основные направления деятельности:</span>
+				<span class="h21">Математика для взрослых</span>
 			</h2>
+
+			<div class="ck"> 
+				<a href="https://youtu.be/EYH5g5kS_xg" target="_blank">
+					<img alt="Репетитор по математике в Минске"
+						class="image1"  
+						src="images/photo/mathematics_tutor.jpg" 
+						title="Репетитор по математике в Минске"></a>
+				<!-- </a> При наличии tab-ов или даже переноса строки - добавляет между фото фиолетовую ссылку длиной в пробел -->
+				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank">
+					<img alt="Занятия по математике в группах"
+						class="image" 
+						src="images/photo/tutor.jpg" 
+						title="Занятия по математике в группах">
+				</a>
+			</div>
 
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-					ИЗМЕНИТЬ ОСНОВНОЕ СОДЕРЖАНИЕ
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pulvinar euismod lorem vel ornare. Nulla accumsan suscipit mollis. Nunc maximus mauris sit amet nisi aliquam, sit amet rutrum libero laoreet. Phasellus non velit ac nisl malesuada finibus. Quisque quis nunc id tellus interdum maximus. Mauris sit amet gravida orci, ut iaculis nibh. Suspendisse volutpat feugiat orci quis faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque id sagittis metus, nec sagittis ligula. Aliquam viverra quam non risus luctus, ut rutrum nisl mattis. Quisque nec libero euismod sem tincidunt ornare cursus at metus. Nunc suscipit fermentum egestas. Nullam id enim eu enim facilisis commodo.
-					Suspendisse vulputate leo eu commodo maximus. Sed nisi urna, varius sed efficitur eget, venenatis id ipsum. Nullam pretium mi non arcu rutrum, a faucibus nunc pretium. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque congue lectus sit amet turpis ultrices aliquam. Nunc euismod erat magna, quis egestas sem gravida eu. Nunc pellentesque facilisis mauris, non facilisis purus ultrices egestas. Phasellus ultricies euismod erat, sit amet porta tellus semper ut. Aenean non turpis viverra, aliquet sapien eget, egestas diam. Nullam sed neque ac ex egestas commodo non quis dolor. Donec elit diam, porttitor sed enim non, auctor ornare ante. Aenean laoreet efficitur quam, sit amet tempor dui ultricies placerat. Cras placerat eu nulla sit amet placerat. Ut a ultrices nisi.
+					Нередко взрослые люди, имеющие высшее образование, востребованную специальность и хороший заработок, осознают, что недостаточная математическая база мешает их дальнейшему росту в профессии и, как следствие, росту благосостояния.
 				</p>
-				<ul>
-					<li>Пункт важный </li>
-					<li>Пункт менее важный</li>
-				</ul>
-				<ol>
-					<li>Пункт первый </li>
-					<li>Пункт второй</li>
-				</ol>
 				<p class="zgt">
-					<img src="images/advantages/a2_multifunctionality.png" alt="Выбрать нужный рисунок">
+					Так как математика играет важную роль в работе IT- специалистов и имеет несколько ключевых применений, то и наибольшая потребность в углубленном изучении математики возникает у работников IT-индустрии, но не только у них.
+				</p>
+				<p class="zgt">
+					В первую очередь я бы посоветовал определиться, с чего вы желаете начать, так как общего рецепта здесь нет.
+				</p>
+				<p class="zgt">
+					Возможно, начать нужно с освоения школьной программы на повышенном или углубленном уровне, затем досконально усвоить курс высшей математики, уделив особое внимание наиболее востребованным главам.
+				</p>
+				<p class="zgt">
+					Можно начинать и с высшей математики, а кому-то необходимы только отдельные дисциплины:
+				</p>								
+				<ul>
+					<li>линейная алгебра</li>
+					<li>аналитическая геометрия</li>
+					<li>математический анализ</li>
+					<li>теория вероятностей и математическая статистика</li>
+				</ul>
+
+				<p class="zgt">
+					Общее понимание предмета и умение применять математические принципы помогает IT-специалистам решать сложные задачи, разрабатывать новые технологии и эффективно работать с данными.
+				</p>
+
+				<p class="zgt">
+					В современном мире данные стали одним из самых ценных активов. Математические методы и статистика позволяют IT-специалистам анализировать и обрабатывать большие объемы данных, выявлять тенденции и закономерности, а также строить предиктивные модели для прогнозирования и принятия решений.
+				</p>
+				<p class="zgt">
+					Математика способствует развитию абстрактного и логического мышления. Эти навыки не только полезны для IT-специалистов при разработке программного обеспечения, но и в повседневной работе, где требуется аналитическое мышление и поиск рациональных решений.
+				</p>
+				<p class="zgt">
+					Таким образом, математика является фундаментальным инструментом для IT-специалистов и позволяет им разрабатывать эффективные алгоритмы, обеспечивать безопасность данных, создавать интеллектуальные системы, работать с графикой и анализировать данные. Понимание математических концепций помогает IT-специалистам решать сложные задачи и быть более эффективными в своей работе, а также открывает возможности для творчества и инноваций в области информационных технологий.
+				</p>
+
+				<h3>Цены на занятия по математике для взрослых:</h3>
+				<ul>
+					<li>стоимость индивидуальных занятий - 17,5 долларов США по курсу продажи в коммерческих банках РБ за один академический час. Минимальная продолжительность - 2 академических часа (90 минут). Стоимость занятия в этом случае составит 35 условных единиц.</li>
+					<li>стоимость занятий в паре - 15 долларов США по курсу продажи в коммерческих банках РБ за один академический час. Минимальная продолжительность - 2 академических часа (90 минут). Стоимость занятия в этом случае составит 30 условных единиц.</li>
+					<li>стоимость занятий в мини-группах - 12,5 долларов США по курсу продажи в коммерческих банках РБ за один академический час. Минимальная продолжительность - 2 академических часа (90 минут). Стоимость занятия в этом случае составит 25 условных единиц. В группе может быть от трёх до пяти человек.</li>
+				</ul>
+				<p class="zgt">
+					Отмечу, что в силу различных поставленных целей и задач, начального уровня знаний, времени начала подготовки по математике, занятия часто проходят в индивидуальном формате.
+				</p>
+				<p class="zgt">
+					Указанные расценки актуальны при изучении достаточного объема материала и при проведении занятий на территории преподавателя. При прохождении отдельных тем или занятиях в онлайн-формате стоимость увеличивается на 5 у.е. за занятие. Выезд репетитора на дом исключён.
+				</p>
+				<p class="zgt">
+					Цены на консультации (одно или несколько занятий) стоит уточнить у репетитора по математике.
+				</p>
+
+				<h3>
+					Искусственный интеллект и машинное обучение
+				</h3>
+				<p class="zgt">
+					Математика является основой для различных алгоритмов машинного обучения и искусственного интеллекта. Разработка моделей машинного обучения требует знания таких математических дисциплин, как линейная алгебра, математический анализ, теория вероятностей и математическая статистика.
+				</p>
+				<p class="zgt">
+					Полученные математические навыки помогут IT-специалистам разрабатывать и настраивать алгоритмы машинного обучения, которые могут обрабатывать данные, выявлять паттерны и делать прогнозы.
+				</p>
+				<p class="zgt">
+					Математические методы необходимы для анализа данных, классификации, кластеризации и прогнозирования.
+				</p>
+
+				<h3>
+					Анализ данных и оптимизация
+				</h3>
+				<p class="zgt">
+					В IT сфере часто возникает потребность в анализе больших объемов данных.
+				</p>
+				<p class="zgt">
+					Математические методы, теория вероятностей и математическая статистика используются для обработки и интерпретации данных, выявления закономерностей, создания моделей и прогнозирования результатов. Они позволяют оптимизировать производительность программы, решать задачи линейного и нелинейного программирования, а также проводить статистический анализ данных.
+				</p>
+
+				<h3>
+					Разработка графических интерфейсов и игр
+				</h3>
+
+				<p class="zgt">
+					Визуальные эффекты, 3D моделирование, физические симуляции - все это требует знания таких разделов математики, как планиметрия, стереометрия, векторы, аналитическая геометрия, тригонометрия и линейная алгебра.Они помогают в работе с трехмерными объектами, преобразованиями координат, в создании впечатляющих визуальных эффектов.
 				</p>
 			</div>
 
