M-125. Added page images.

--- a/mathematics-for-professionals.html
+++ b/mathematics-for-professionals.html
@@ -316,18 +316,14 @@
 			</h2>
 
 			<div class="ck"> 
-				<a href="https://youtu.be/EYH5g5kS_xg" target="_blank">
-					<img alt="Репетитор по математике в Минске"
-						class="image1"  
-						src="images/photo/mathematics_tutor.jpg" 
-						title="Репетитор по математике в Минске"></a>
-				<!-- </a> При наличии tab-ов или даже переноса строки - добавляет между фото фиолетовую ссылку длиной в пробел -->
-				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank">
-					<img alt="Занятия по математике в группах"
-						class="image" 
-						src="images/photo/tutor.jpg" 
-						title="Занятия по математике в группах">
-				</a>
+				<img alt="Репетитор по математике для взрослых в Минске"
+					class="image1"  
+					src="images/photo/mathematics-for-professionals-photo-1.jpg" 
+					title="Репетитор по математике для взрослых в Минске">
+				<img alt="Репетитор по математике для IT-специалистов Минск"
+					class="image" 
+					src="images/photo/mathematics-for-professionals-photo-2.jpg" 
+					title="Репетитор по математике для IT-специалистов Минск">
 			</div>
 
 			<div id="realmain" class="zgt">
