M-128. Transfered main content.

--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -6,8 +6,8 @@
 		</title>
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="ИЗМЕНИТЬ Репетитор по математике в Минске для школьников проводит подготовку к ЦТ и дополнительные  занятия по алгебре и геометрии: 5,6,7,8,9,10,11 класс. Репетитор по высшей математике для студентов Минск – преподаватель со стажем более 20 лет, кандидат физико-математических наук.">
-		<meta name="keywords" content="ИЗМЕНИТЬ репетитор, репетитор по математике, репетитор математика, репетитор математики, подготовка по математике, ЦТ подготовка, ЦТ математика, подготовка по математике к ЦТ, репетитор класс, репетитор по высшей математике, репетитор Минск, репетитор по математике в Минске, репетитор по алгебре, репетитор по геометрии">
+		<meta name="description" content="Репетитор по русскому и белорусскому языкам для школьников и абитуриентов Игнатьева Марина Михайловна">
+		<meta name="keywords" content="Репетитор по русскому, репетитор по русскому языку, репетитор русский класс, репетитор по русскому 9 класс, репетитор по русскому языку 9, репетитор по русскому языку 9 класс, подготовка к цт по русскому, подготовка к цт по русскому языку, репетитор по цт русский язык, репетитор по русскому языку подготовка к цт, репетитор по русскому минск, репетитор по русскому языку в минске, подготовка к цэ русский, подготовка к цт по русскому языку, русский язык подготовка к централизованному тестированию, репетитор по белорусскому, репетитор по белорусскому языку, репетитор по белорусскому языку в минске">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
@@ -30,10 +30,10 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Репетитор по математике в Минске ИЗМЕНИТЬ</h1>
+			<h1>Репетитор по русскому языку, Минск</h1>
 			<span class="zs">  
-				Математика: подготовка к ЦТ по математике, репетитор математики для школьников, <br>
-				репетитор по высшей математике для студентов, Минск. ИЗМЕНИТЬ
+				Русский язык: подготовка к ЦТ и ЦЭ по русскому языку в Минске,<br>
+				репетитор по русскому 5 – 9 класс, 10 – 11 класс.
 			</span>
 			</div>
 			<div class="g3">
@@ -300,40 +300,152 @@
 		</div>
 		
 		<div class="main">
-			<h2 class="main">
-				<span class="h11">
-					Репетитор по математике и высшей математике в Минске Игнатьев Игорь Викторович<br>
-					Проспект Дзержинского, дом 131, станция метро «Малиновка», Брилевичи ИЗМЕНИТЬ
-				</span>
-			</h2>
-
-			<div class="right1">
-				<span class="skr">
-					<a href="otzivi.html">Отзывы о репетиторе с комментариями</a>
-				</span>
-			</div>
 
 			<h2 class="main"> 
-				<span class="h21">Основные направления деятельности:</span>
+				<span class="h21">Репетитор по русскому и белорусскому языкам для школьников и абитуриентов Игнатьева Марина Михайловна</span>
 			</h2>
 
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-					ИЗМЕНИТЬ ОСНОВНОЕ СОДЕРЖАНИЕ
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pulvinar euismod lorem vel ornare. Nulla accumsan suscipit mollis. Nunc maximus mauris sit amet nisi aliquam, sit amet rutrum libero laoreet. Phasellus non velit ac nisl malesuada finibus. Quisque quis nunc id tellus interdum maximus. Mauris sit amet gravida orci, ut iaculis nibh. Suspendisse volutpat feugiat orci quis faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque id sagittis metus, nec sagittis ligula. Aliquam viverra quam non risus luctus, ut rutrum nisl mattis. Quisque nec libero euismod sem tincidunt ornare cursus at metus. Nunc suscipit fermentum egestas. Nullam id enim eu enim facilisis commodo.
-					Suspendisse vulputate leo eu commodo maximus. Sed nisi urna, varius sed efficitur eget, venenatis id ipsum. Nullam pretium mi non arcu rutrum, a faucibus nunc pretium. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque congue lectus sit amet turpis ultrices aliquam. Nunc euismod erat magna, quis egestas sem gravida eu. Nunc pellentesque facilisis mauris, non facilisis purus ultrices egestas. Phasellus ultricies euismod erat, sit amet porta tellus semper ut. Aenean non turpis viverra, aliquet sapien eget, egestas diam. Nullam sed neque ac ex egestas commodo non quis dolor. Donec elit diam, porttitor sed enim non, auctor ornare ante. Aenean laoreet efficitur quam, sit amet tempor dui ultricies placerat. Cras placerat eu nulla sit amet placerat. Ut a ultrices nisi.
+					Игнатьева Марина Михайловна в 1998 году закончила школу в г. Минске с золотой медалью и поступила в БГПУ им. М. Танка.
 				</p>
-				<ul>
-					<li>Пункт важный </li>
-					<li>Пункт менее важный</li>
-				</ul>
-				<ol>
-					<li>Пункт первый </li>
-					<li>Пункт второй</li>
-				</ol>
+
 				<p class="zgt">
-					<img src="images/advantages/a2_multifunctionality.png" alt="Выбрать нужный рисунок">
+					В 2003 году окончила Белорусский государственный педагогический университет им. М. Танка с красным дипломом. 
+					Ей была присвоена квалификация “преподаватель русского языка и литературы, преподаватель белорусского языка и литературы”.
 				</p>
+
+				<p class="zgt">
+					Первым местом работы стала ГУО "Средняя школа № 73 г. Минска имени М. Ф. Шмырева", в которой Игнатьева М.М. работала с 2003 по 2007 гг.
+				</p>
+
+
+				<p class="zgt">
+					В 2007 году Марина Михайловна ушла в декретный отпуск и, начиная с 2010 года, стала заниматься репетиторством по русскому языку. 
+					Далее набирался опыт и повышалась квалификация. 
+					Работа в школе, гимназии, а также постоянное самообразование и развитие в профессии приносили результат.
+				</p>
+
+
+				<p class="zgt">
+					На данный момент Марина Михайловна – учитель высшей категории и высокопрофессиональный репетитор по русскому языку в Минске. 
+					Ученики, занимающиеся у нее, неуклонно повышают свой уровень знаний и успеваемость. 
+					Её способные ученики, выполняющие заданный объём работы, стабильно набирают больше 90 баллов на ЦТ и ЦЭ по русскому языку. 
+					Достигались и результаты в 100 баллов.
+				</p>
+				
+				<p class="zgt">
+					За долгий период преподавания учителем создана обширная база учебных материалов по русскому языку,
+					 авторских наработок и разнообразных вариантов ЦТ и ЦЭ по русскому языку.
+				</p>				
+
+
+				<p class="zgt">
+					Методика преподавания русского языка включает себя подробный и доступный разбор по темам:
+				</p>
+
+				<ul>
+					<li>орфография</li>
+					<li>синтаксис и пунктуация</li>
+					<li>состав слова и словообразование</li>
+					<li>морфология</li>
+					<li>фонетика и графика</li>
+					<li>лексика и фразеология</li>
+					<li>текст, стилистика и культура речи</li>
+				</ul>
+
+				<p class="zgt">
+					Марина Михайловна – мать двоих дочерей. Старшая дочь (сентябрь 2023 года) учится в 11 классе ГУО "Гимназия № 61 г. Минска", 
+					имеет 10 баллов по русскому языку и стабильно идёт на золотую медаль. 
+					Младшая перешла во второй класс СШ № 204, где в первом классе выиграла конкурс “Золотое перышко”, 
+					получила медаль “Лучший чтец” и показала самую высокую скорость чтения – 101 слово в минуту).	
+				</p>
+
+				<p class="zgt">
+					Воспитание и развитие собственных детей, а также другие семейные заботы занимают немало времени, 
+					поэтому много учеников Марина Михайловна взять не может. 
+					Обычно это ученики репетитора по математике Игнатьева Игоря Викторовича, 
+					которые пользуются опцией “Репетитор по математике и репетитор по русскому языку в одной семье” 
+					и при определённых условиях имеют скидку на занятия по русскому языку. 
+					Однако периодически возникает возможность взять нескольких учеников без привязки к математике. 
+					Информацию о наличии свободных мест стоит уточнить у преподавателя.
+				</p>
+
+				<h3>Условия проведения занятий по русскому и белорусскому языкам:</h3>
+
+				<ul>
+					<li>
+						Репетитор по русскому и белорусскому языкам проводит занятия по адресу: 
+						г. Минск, проспект Дзержинского, дом 125, Московский район, микрорайон Брилевичи. 
+						Станция метро “Малиновка” располагается в 165 метрах от места проведения занятий.
+					</li>
+					<li>
+						Занятия проходят в уютном кабинете, спроектированном дизайнером специально для проведения занятий. 
+						Современная и высококачественная мебель, продуманное освещение, профессиональное оборудование и 
+						богатейший выбор учебных материалов по русскому и белорусскому языкам.
+					</li>
+					<li>
+						Занятия проходят исключительно на территории преподавателя.
+					</li>
+					<li>
+						Репетитор по русскому языку в Минске проводит занятия индивидуально и в парах.
+					</li>
+					<li>
+						Занятия в парах возможны для учеников с сопоставимыми уровнем знаний и способностями. 
+						Формат занятий определяет учитель.
+					</li>
+					<li>
+						Периодичность занятий – 1 или 2 раза в неделю.
+					</li>
+				</ul>
+
+				<h3>
+					Предоставляемые услуги и цены. Стоимость занятий по русскому и белорусскому языкам:
+				</h3>
+
+				<ol>
+					<li>Репетитор по русскому языку 3-4 класс</li>
+					<li>Репетитор по русскому языку 5-9 класс в Минске</li>
+					<li>Репетитор по русскому языку 10-11 класс, Минск</li>
+					<li>Репетитор по белорусскому языку 3-4 класс</li>
+					<li>Репетитор по белорусскому языку 5-9 класс в Минске</li>
+					<li>Репетитор по белорусскому языку 10-11 класс, Минск</li>
+						<ul>
+							<li>
+								Стоимость индивидуальных занятий - 15 долларов США по курсу продажи в коммерческих банках РБ за один академический час. 
+								Продолжительность занятия - 2 академических часа (90 минут). 
+								Стоимость занятия в этом случае составит 30 условных единиц.
+							</li>
+							<li>
+								Стоимость занятий в паре – 12,5 долларов по курсу продажи в коммерческих банках РБ за один академический час. 
+								Продолжительность - 2 академических часа (90 минут). 
+								Стоимость занятия в этом случае составит 25 условных единиц.
+							</li>
+							<li>
+								Если ученик занимается математикой у Игоря Викторовича в мини-группах 2 раза в неделю, 
+								то ему предоставляется скидка в размере 5 долларов за каждое занятие по русскому языку.
+							</li>
+						</ul>
+
+					<li>Подготовка к ЦЭ по русскому языку в Минске</li>
+					<li>Подготовка к ЦТ по русскому языку, Минск</li>
+						<ul>
+							<li>
+								Стоимость индивидуальных занятий - 15 долларов США по курсу продажи в коммерческих банках РБ за один академический час (45 минут). 
+								Продолжительность занятия - 2 астрономических часа (120 минут). 
+								Стоимость занятия в этом случае составит 40 условных единиц.
+							</li>
+							<li>
+								Стоимость занятий в паре – 13 долларов по курсу продажи в коммерческих банках РБ за один академический час (45 минут). 
+								Продолжительность - 2 астрономических часа (120 минут). 
+								Стоимость занятия в этом случае составит 35 условных единиц.
+							</li>
+							<li>
+								Если ученик занимается математикой у Игоря Викторовича в мини-группах 2 раза в неделю, 
+								то ему предоставляется скидка в размере 5 долларов за каждое занятие по русскому языку.
+							</li>
+						</ul>
+				</ol>
 			</div>
 
 			<div class="right1">
