M-128. Added main photos.

--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -302,8 +302,22 @@
 		<div class="main">
 
 			<h2 class="main"> 
-				<span class="h21">Репетитор по русскому и белорусскому языкам для школьников и абитуриентов Игнатьева Марина Михайловна</span>
+				<span class="h21">
+					Репетитор по русскому и белорусскому языкам для школьников и абитуриентов <br>
+					Игнатьева Марина Михайловна
+				</span>
 			</h2>
+
+			<div class="ck"> 
+					<img alt="Репетитор по русскому языку в Минске"
+						class="image1"  
+						src="images/photo/russian_language_tutor.jpg" 
+						title="Репетитор по русскому языку в Минске">
+					<img alt="Репетитор по белорусскому языку в Минске"
+						class="image" 
+						src="images/photo/belorussian_language_tutor.jpg" 
+						title="Репетитор по белорусскому языку в Минске">
+			</div>
 
 			<div id="realmain" class="zgt">
 				<p class="zgt">
