M-128. Обновлён адрес со ссылкой на яндекс карты.

--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -505,8 +505,14 @@
 					<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
 				</div>
 				<div class="glf4">
-					<img  src="./images/advantages/maps.png"> <a href="mestopolozhenie.html#karta">Проспект Дзержинского, 131</a><br>
-					<img src="./images/advantages/metro.png"> <a href="mestopolozhenie.html#karta">(ст.м. Малиновка)</a>
+					<img  src="./images/advantages/maps.png"> 
+					<a target="_blank" href="https://yandex.by/maps/157/minsk/house/Zk4YcgBlTUcFQFtpfXR1dnxjYw==/?ll=27.475422%2C53.847007&z=17">
+						Проспект Дзержинского, 125
+					</a><br>
+					<img src="./images/advantages/metro.png">
+					<a target="_blank"  href="https://yandex.by/maps/157/minsk/?ll=27.475084%2C53.847456&mode=routes&rtext=53.848588%2C27.474549~53.847007%2C27.475422&rtt=pd&ruri=~ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgoyNDk4NjMyMDQ2EkzQkdC10LvQsNGA0YPRgdGMLCDQnNGW0L3RgdC6LCDQv9GA0LDRgdC_0LXQutGCINCU0LfRj9GA0LbRi9C90YHQutCw0LPQsCwgMTI1IgoNqs3bQRVVY1dC&z=17">
+						(ст.м. Малиновка)
+					</a>
 				</div>
 				<div class="glf5">
 					<img src="./images/cat/cat1.png">
@@ -530,8 +536,14 @@
 					<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
 				</div>
 				<div class="glf4">
-					<img  src="./images/advantages/maps.png"> <a href="mestopolozhenie.html#karta">Проспект Дзержинского, 131</a><br>
-					<img src="./images/advantages/metro.png"> <a href="mestopolozhenie.html#karta">(ст.м. Малиновка)</a>
+					<img  src="./images/advantages/maps.png"> 
+					<a target="_blank" href="https://yandex.by/maps/157/minsk/house/Zk4YcgBlTUcFQFtpfXR1dnxjYw==/?ll=27.475422%2C53.847007&z=17">
+						Проспект Дзержинского, 125
+					</a><br>
+					<img src="./images/advantages/metro.png">
+					<a target="_blank"  href="https://yandex.by/maps/157/minsk/?ll=27.475084%2C53.847456&mode=routes&rtext=53.848588%2C27.474549~53.847007%2C27.475422&rtt=pd&ruri=~ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgoyNDk4NjMyMDQ2EkzQkdC10LvQsNGA0YPRgdGMLCDQnNGW0L3RgdC6LCDQv9GA0LDRgdC_0LXQutGCINCU0LfRj9GA0LbRi9C90YHQutCw0LPQsCwgMTI1IgoNqs3bQRVVY1dC&z=17">
+						(ст.м. Малиновка)
+					</a>
 				</div>
 				<div class="glf5">
 					<img src="./images/cat/cat1.png">
@@ -555,8 +567,14 @@
 					<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
 				</div>
 				<div class="glf4">
-					<img  src="./images/advantages/maps.png"> <a href="mestopolozhenie.html#karta">Проспект Дзержинского, 131</a><br>
-					<img src="./images/advantages/metro.png"> <a href="mestopolozhenie.html#karta">(ст.м. Малиновка)</a>
+					<img  src="./images/advantages/maps.png"> 
+					<a target="_blank" href="https://yandex.by/maps/157/minsk/house/Zk4YcgBlTUcFQFtpfXR1dnxjYw==/?ll=27.475422%2C53.847007&z=17">
+						Проспект Дзержинского, 125
+					</a><br>
+					<img src="./images/advantages/metro.png">
+					<a target="_blank"  href="https://yandex.by/maps/157/minsk/?ll=27.475084%2C53.847456&mode=routes&rtext=53.848588%2C27.474549~53.847007%2C27.475422&rtt=pd&ruri=~ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgoyNDk4NjMyMDQ2EkzQkdC10LvQsNGA0YPRgdGMLCDQnNGW0L3RgdC6LCDQv9GA0LDRgdC_0LXQutGCINCU0LfRj9GA0LbRi9C90YHQutCw0LPQsCwgMTI1IgoNqs3bQRVVY1dC&z=17">
+						(ст.м. Малиновка)
+					</a>
 				</div>
 				<div class="clear">
 				</div>
