--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -12,6 +12,9 @@
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
 		<style>
+			.glf1, .glf2 {
+				margin-top:1.5%;
+			}
 		</style>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114776658-1">
@@ -491,19 +494,17 @@
 		<div class="fot">
 			<div class="glf">
 				<div class="glf1">
-					<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
+					<img src="./images/advantages/mtts.png"> <a style="text-decoration: none;" href="tel:+375295021002">+375(29)502-10-02</a><br>
+					<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375444565275">+375(44)456-52-75</a><br>
 				</div>
 				<div class="glf2">
-					<img src="./images/advantages/mtts.png"> <a style="text-decoration: none;" href="tel:+375298515251">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/skype.png"> <a href="skype:xoziain_777?chat”">(по запросу)</a> 
+					<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375295021002">+375(29)502-10-02</a><br>
+					<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="https://t.me/+375295021002">+375(29)502-10-02</a><br>
 				</div>
 				<div class="glf3">
+					<img src="./images/advantages/world-map.png"> <a href="site_map.html">Карта сайта</a><br>
 					<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
-					<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
-				</div>
+				</div>				
 				<div class="glf4">
 					<img  src="./images/advantages/maps.png"> 
 					<a target="_blank" href="https://yandex.by/maps/157/minsk/house/Zk4YcgBlTUcFQFtpfXR1dnxjYw==/?ll=27.475422%2C53.847007&z=17">
@@ -522,18 +523,16 @@
 			</div>
 			<div class="glf0">
 				<div class="glf1">
-					<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
+					<img src="./images/advantages/mtts.png"> <a style="text-decoration: none;" href="tel:+375295021002">+375(29)502-10-02</a><br>
+					<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375444565275">+375(44)456-52-75</a><br>
 				</div>
 				<div class="glf2">
-					<img src="./images/advantages/mtts.png"> <a style="text-decoration: none;" href="tel:+375298515251">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/skype.png"> <a href="skype:xoziain_777?chat”">(по запросу)</a> 
+					<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375295021002">+375(29)502-10-02</a><br>
+					<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="https://t.me/+375295021002">+375(29)502-10-02</a><br>
 				</div>
 				<div class="glf3">
+					<img src="./images/advantages/world-map.png"> <a href="site_map.html">Карта сайта</a><br>
 					<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
-					<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
 				</div>
 				<div class="glf4">
 					<img  src="./images/advantages/maps.png"> 
@@ -553,19 +552,17 @@
 			</div>
 			<div class="glf9">
 				<div class="glf1">
-					<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/telegram.png"> <a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
+					<img src="./images/advantages/mtts.png"> <a style="text-decoration: none;" href="tel:+375295021002">+375(29)502-10-02</a><br>
+					<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375444565275">+375(44)456-52-75</a><br>
 				</div>
 				<div class="glf2">
-					<img src="./images/advantages/mtts.png"> <a style="text-decoration: none;" href="tel:+375298515251">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/skype.png"> <a href="skype:xoziain_777?chat”">(по запросу)</a> 
+					<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375295021002">+375(29)502-10-02</a><br>
+					<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="https://t.me/+375295021002">+375(29)502-10-02</a><br>
 				</div>
 				<div class="glf3">
+					<img src="./images/advantages/world-map.png"> <a href="site_map.html">Карта сайта</a><br>
 					<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
-					<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
-				</div>
+				</div>				
 				<div class="glf4">
 					<img  src="./images/advantages/maps.png"> 
 					<a target="_blank" href="https://yandex.by/maps/157/minsk/house/Zk4YcgBlTUcFQFtpfXR1dnxjYw==/?ll=27.475422%2C53.847007&z=17">
