--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -80,13 +80,16 @@
 				<div class="foncall">
 					<img src="./images/advantages/mts.png"
 					 	alt="tech">
-						<a href="tel:+375298515251">+375(29)851-52-51</a><br>
+						<a href="tel:+375295021002">+375(29)502-10-02</a><br>
 					<img src="./images/advantages/velcom.jpg"
 					 	alt="tech">
-						<a href="tel:+375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/vib.png"
+						<a href="tel:+375444565275">+375(44)456-52-75</a><br>
+					<img src="./images/advantages/viber.png"
 					 	alt="tech">
-						<a href="tel:+375172400021">+375(17)240-00-21</a>
+						<a href="viber://add?number=375295021002">+375(29)502-10-02</a><br>
+					<img src="./images/advantages/telegram.png"
+						alt="tech">
+					   <a href="https://t.me/+375295021002">+375(29)502-10-02</a>						
 				</div><br>
 				<div align="center">
 					<iframe src="https://yandex.by/sprav/widget/rating-badge/1373635637?type=rating" width="150" height="50" frameborder="0"></iframe>
