--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<title>
-			Репетитор по математике Минск. ИЗМЕНИТЬ
+			Репетитор по русскому и белорусскому языкам для школьников и абитуриентов Игнатьева Марина Михайловна
 		</title>
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
