--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 					<a class="blink" href="about.html">Информация о репетиторе</a><br>
 					<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 					<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ по математике</a><br>
-					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика для студентов</a><br>
+					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ</a><br>
+					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
 					<a class="blink" href="texraboti.html">Математика для взрослых</a><br>
-					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор по математике</a><br>
+					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
 					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицей, колледж</a><br>
 					<a class="blink" href="texraboti.html">Репетитор по русскому языку</a><br>
 				</div>
